# Test_FastApi-React_FoodReciepes

./: .gitignore  pyproject.toml  recipe_app.db
alembic/versions/: d5566a2e7c62_create_recipes_table.py
recipe-frontend/: package-lock.json  package.json
recipe-frontend/src/: App.css  App.jsx
recipe-frontend/src/components/: AddRecipeForm.jsx  EditRecipeForm.jsx  RecipeDetail.jsx  RecipeList.jsx
testfastapi/: alembic.ini  main.py  pyproject.toml  recipe_app.db  schemas.py
testfastapi/alembic/: env.py
testfastapi/api/endpoints/: recipes.py
testfastapi/db/: base.py  crud.py  session.py
testfastapi/testfastapi/: main.py  schemas.py
testfastapi/testfastapi/api/endpoints/: recipes.py
testfastapi/testfastapi/core/: config.py
testfastapi/testfastapi/db/: models.py  session.py
