[tool.poetry]
name = "testfastapi"
version = "0.1.0"
description = ""
authors = ["hossein abbasifar <hossein.abbasifar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.125.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
fastapi-cors = "^0.0.6"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
